--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -51,3 +51,21 @@
 code {
   color: yellow;
 }
+
+@media (min-width: 576px) {
+  .h-sm-100 {
+      height: 100%;
+  }
+}
+
+.LinhaTeste {
+  background-color: #336699 !important;
+}
+
+@media (max-width: 768px) {
+  .row-height {
+    height: 80px;
+  }
+}
+
+
