--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,4 +1,59 @@
 .Ativo {
     border-left: solid 5px white;
-    margin-left: 10px;
+    margin-left: -1px;
+}
+
+.Inativo {
+    margin-left: 4px;
+}
+
+.LinksRedesSociais {
+    font-family: Arial;
+    font-size: 16px; 
+    font-weight: 400;
+    color: white; 
+    text-decoration: none;
+    margin-top: 5px;
+}
+
+.ItensMenu {
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+    text-decoration: none;
+    height: 32px;
+}
+
+.SettingsIcon {
+    margin-top: -5px;
+    margin-left: 5px; 
+    margin-right: 10px;
+}
+
+.MeuNome {
+    color: white;
+    font-family: 'Comic Sans MS';
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.LinhaHorizontal {
+    height: 10px;
+    border-bottom: solid 1px white;
+    margin-left: 0px;
+    margin-right: 20px;
+}
+
+.ImgMenu {
+    margin-top: -5px;
+}
+
+.MenuTitle {
+    font-family: Arial;
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+    margin-left: -5px;
+    margin-bottom: 0px;
 }
