--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,9 +7,13 @@
     margin-left: 4px;
 }
 
+.ImgRedesSociais {
+    margin-bottom: 5px;
+}
+
 .LinksRedesSociais {
     font-family: Arial;
-    font-size: 16px; 
+    font-size: 14px; 
     font-weight: 400;
     color: white; 
     text-decoration: none;
@@ -18,7 +22,7 @@
 
 .ItensMenu {
     font-family: Roboto;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 700;
     color: white;
     text-decoration: none;
@@ -34,7 +38,7 @@
 .MeuNome {
     color: white;
     font-family: 'Comic Sans MS';
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
 }
 
@@ -51,7 +55,7 @@
 
 .MenuTitle {
     font-family: Arial;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 700;
     color: white;
     margin-left: -5px;
