--- a/src/pages/PageExperience.css
+++ b/src/pages/PageExperience.css
@@ -63,4 +63,7 @@ h4{text-align:center;margin:30px 0;color:#444}
 .Titulo_Habilidades{
     border-bottom: 5px solid #336699;
     margin-bottom: -2px;
+    margin-top: 5px;
+    color: #336699;
+    font-weight: bolder;
 }
